fixed Formatter issues